fix: Add custom scrollbar

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,6 +2,22 @@
   font-family: 'Lato', sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .scoreParameter {
   margin-bottom: 0;
   margin-top: 1rem;
